--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -17,6 +17,10 @@
     background-color: white;
 }
 
+body {
+    font-family: sans-serif!important;
+}
+
 #heading {
     position: absolute;
     top: 10%;
